--- a/index.html
+++ b/index.html
@@ -2,19 +2,37 @@
 <html>
 <head>
 	<title>De vloot</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
 </head>
 <body>
-	<h1>De Vloot</h1>
-	<p>Regeren over het water</p>
-	<ul class="top-menu">
-		<li>Start</li>	
-		<li>Geschiedenis</li>
-		<li>Kruisers</li>
-		<li>Vliegdekschepen</li>
-		<li>Onderzeeërs</li>
-	</ul>
-	<h2>Wat drijft daar in het water?</h2>
-	<p><img src="img/vloot0.jpg" class="top-left">Nunc ac magna. Maecenas odio dolor, vulputate vel, auctor ac, accumsan id, felis. Pellentesque cursus sagittis felis. Pellentesque porttitor, velit lacinia egestas auctor, diam eros tempus arcu, nec vulputate augue magna vel risus. Cras non magna vel ante adipiscing rhoncus. Vivamus a mi. Morbi neque. Aliquam erat volutpat. Integer ultrices lobortis eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin semper, ante vitae sollicitudin posuere, metus quam iaculis nibh, vitae scelerisque nunc massa eget pede. Sed velit urna, interdum vel, ultricies vel, faucibus at, quam. Nunc ac magna. Maecenas odio dolor, vulputate vel, auctor ac, accumsan id, felis. Pellentesque cursus sagittis felis. Pellentesque porttitor, velit lacinia egestas auctor, diam eros tempus arcu, nec vulputate augue magna vel risus. Cras non magna vel ante adipiscing rhoncus. Vivamus a mi. Morbi neque. Aliquam erat volutpat. Integer ultrices lobortis eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin semper, ante vitae sollicitudin posuere, metus quam iaculis nibh, vitae scelerisque nunc massa eget pede. Sed velit urna, interdum vel, ultricies vel, faucibus at, quam.
-	</p>
+	<div class="container">
+		<header>
+		<div class="slogan">
+			<h1>De Vloot</h1>
+			<p>Regeren over het water</p>
+		</div><!-- end of id "slogan"-->
+		<nav>
+			<ul class="top-menu">
+				<li><a href="index.html">Start</a></li>	
+				<li><a href="geschiedenis.html">Geschiedenis</a></li>
+				<li><a href="kruisers.html">Kruisers</a></li>
+				<li><a href="vliegdekschepen.html">Vliegdekschepen</a></li>
+				<li><a href="onderzeeers.html">Onderzeeërs</a></li>
+			</ul>
+		</nav>
+		</header>
+		<main>
+			<h2>Wat drijft daar in het water?</h2>
+			<p><img src="img/vloot0.jpg" class="top-left">Nunc ac magna. Maecenas odio dolor, vulputate vel, auctor ac, accumsan id, felis. Pellentesque cursus sagittis felis. Pellentesque porttitor, velit lacinia egestas auctor, diam eros tempus arcu, nec vulputate augue magna vel risus. Cras non magna vel ante adipiscing rhoncus. Vivamus a mi. Morbi neque. Aliquam erat volutpat. Integer ultrices lobortis eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin semper, ante vitae sollicitudin posuere, metus quam iaculis nibh, vitae scelerisque nunc massa eget pede. Sed velit urna, interdum vel, ultricies vel, faucibus at, quam. Nunc ac magna. Maecenas odio dolor, vulputate vel, auctor ac, accumsan id, felis. Pellentesque cursus sagittis felis. Pellentesque porttitor, velit lacinia egestas auctor, diam eros tempus arcu, nec vulputate augue magna vel risus. Cras non magna vel ante adipiscing rhoncus. Vivamus a mi. Morbi neque. Aliquam erat volutpat. Integer ultrices lobortis eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin semper, ante vitae sollicitudin posuere, metus quam iaculis nibh, vitae scelerisque nunc massa eget pede. Sed velit urna, interdum vel, ultricies vel, faucibus at, quam.
+				
+			</p>
+		</main>
+		<footer>
+
+
+		</footer>
+	</div><!-- end of class "container"-->
 </body>
 </html>
